Add the next buttons to the swiper slider

--- a/packages/blocks-next/src/styles/swiper.scss
+++ b/packages/blocks-next/src/styles/swiper.scss
@@ -1,5 +1,7 @@
 .sc-image-slider {
 	$themeColor: #007aff !default;
+	--swiper-navigation-size: 44px;
+	--swiper-navigation-color: #fff;
 
 	@at-root {
 		@font-face {
@@ -196,6 +198,87 @@
 			min-width: 1px;
 			height: var(--swiper-centered-offset-after);
 		}
+	}
+
+	.swiper-button-next,
+	.swiper-button-prev {
+		position: absolute;
+		top: var(--swiper-navigation-top-offset, 50%);
+		width: calc(var(--swiper-navigation-size) / 44 * 27);
+		height: var(--swiper-navigation-size);
+		margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+		z-index: 10;
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: var(--swiper-navigation-color, var(--swiper-theme-color));
+
+		&.swiper-button-disabled {
+			opacity: 0.35;
+			cursor: auto;
+			pointer-events: none;
+		}
+
+		&.swiper-button-hidden {
+			opacity: 0;
+			cursor: auto;
+			pointer-events: none;
+		}
+
+		svg {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+			transform-origin: center;
+		}
+
+		&:after {
+			font-family: swiper-icons;
+			font-size: var(--swiper-navigation-size);
+			text-transform: none !important;
+			letter-spacing: 0;
+			font-variant: initial;
+			line-height: 1;
+		}
+	}
+
+	.swiper-navigation-disabled .swiper-button-next,
+	.swiper-navigation-disabled .swiper-button-prev {
+		display: none !important;
+	}
+
+	.swiper-rtl .swiper-button-next svg,
+	.swiper-rtl .swiper-button-prev svg {
+		transform: rotate(180deg);
+	}
+
+	.swiper-button-prev,
+	.swiper-rtl .swiper-button-next {
+		left: var(--swiper-navigation-sides-offset, 10px);
+		right: auto;
+	}
+
+	.swiper-button-next,
+	.swiper-rtl .swiper-button-prev {
+		right: var(--swiper-navigation-sides-offset, 10px);
+		left: auto;
+	}
+
+	.swiper-button-prev:after,
+	.swiper-rtl .swiper-button-next:after {
+		content: 'prev';
+	}
+
+	.swiper-button-next,
+	.swiper-rtl .swiper-button-prev {
+		right: var(--swiper-navigation-sides-offset, 10px);
+		left: auto;
+	}
+
+	.swiper-button-next:after,
+	.swiper-rtl .swiper-button-prev:after {
+		content: 'next';
 	}
 
 	.swiper-lazy-preloader {
