Fixed some design shrinking issue for drawer

--- a/packages/blocks-next/src/styles/drawer.scss
+++ b/packages/blocks-next/src/styles/drawer.scss
@@ -16,12 +16,19 @@
 	top: 0;
 	left: auto;
 	bottom: auto;
+	overflow: hidden;
 	font-family: var(--sc-font-sans);
 	font-weight: var(--sc-font-weight-normal);
+	z-index: var(--sc-z-index-drawer, 999999999);
 	animation: slide-out
 		var(--sc-drawer-transition-speed, var(--sc-transition-medium))
 		cubic-bezier(0.4, 0, 0.2, 1);
-	z-index: 999999999;
+
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
+	}
 
 	&[open] {
 		animation: slide-in
@@ -30,15 +37,15 @@
 
 		&::backdrop {
 			animation: backdrop-fade-in
-				var(--sc-drawer-transition-speed, var(--sc-transition-medium)) ease
-				forwards;
+				var(--sc-drawer-transition-speed, var(--sc-transition-medium))
+				ease forwards;
 		}
 	}
 
 	&:modal {
-		min-height: 100vh;
-		display: flex;
-		flex-direction: column;
+		display: block;
+		margin: 0;
+		padding: 0;
 	}
 
 	&::backdrop {
@@ -62,6 +69,8 @@
 		align-items: center;
 		padding: var(--sc-drawer-header-spacing, var(--sc-spacing-medium));
 		border-bottom: var(--sc-drawer-border);
+		box-sizing: border-box;
+		border-bottom: var(--sc-drawer-border);
 	}
 
 	&__title {
@@ -84,6 +93,11 @@
 	&__body {
 		flex: 1 1 auto;
 		padding: var(--sc-drawer-body-spacing, var(--sc-spacing-medium));
+		box-sizing: border-box;
+		overflow: auto;
+		-webkit-overflow-scrolling: touch;
+		height: var(--sc-drawer-size, 400px);
+		min-height: 200px;
 	}
 
 	&__footer {
@@ -95,10 +109,14 @@
 @keyframes slide-in {
 	from {
 		opacity: 0;
+		display: flex;
+		flex-direction: column;
 		transform: translateX(100%);
 	}
 	to {
 		opacity: 1;
+		display: flex;
+		flex-direction: column;
 		transform: translateX(0);
 	}
 }
@@ -106,7 +124,8 @@
 @keyframes slide-out {
 	from {
 		opacity: 1;
-		display: block;
+		display: flex;
+		flex-direction: column;
 		transform: translateX(0);
 	}
 	to {
