--- a/packages/blocks-next/src/styles/tag.scss
+++ b/packages/blocks-next/src/styles/tag.scss
@@ -10,6 +10,7 @@
 	line-height: calc(
 		var(--sc-input-height-medium) - var(--sc-input-border-width) * 2
 	);
+	border: none;
 	border-radius: var(--sc-input-border-radius-medium);
 	padding: 0 var(--sc-spacing-small);
 }
