Filter & Sort Blocks Dropdown Rendering in editor & styling fixes

--- a/packages/blocks-next/src/styles/dropdown.scss
+++ b/packages/blocks-next/src/styles/dropdown.scss
@@ -47,7 +47,7 @@
 		user-select: none;
 		white-space: var(--sc-menu-item-white-space, nowrap);
 		cursor: pointer;
-		text-decoration: none;
+		text-decoration: none !important;
 
 		&:focus,
 		&:hover,
