use form row spacing as priority before spacing medium

--- a/packages/components/src/components/controllers/checkout-form/sc-order-billing-address/sc-order-billing-address.scss
+++ b/packages/components/src/components/controllers/checkout-form/sc-order-billing-address/sc-order-billing-address.scss
@@ -4,6 +4,6 @@
 
 .order-billing-address {
   &__toggle {
-    margin-bottom: var(--sc-spacing-medium);
+    margin-bottom: var(--sc-form-row-spacing, var(--sc-spacing-medium));
   }
 }
