Update the apply button take the same color as the input color

--- a/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
+++ b/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
@@ -15,6 +15,7 @@ sc-button {
     visibility: hidden;
     transform: scale(0.9);
     transition: all var(--sc-transition-fast) ease;
+    color: var(--sc-input-color);
   }
 
   .coupon-button-mobile {
