Add the quantity to the template file

--- a/templates/templates/single-product.html
+++ b/templates/templates/single-product.html
@@ -58,6 +58,7 @@
 				<!-- /wp:group -->
 				<!-- /wp:surecart/product-price-choice-template -->
 				<!-- /wp:surecart/product-price-choices-v2 -->
+				<!-- wp:surecart/product-quantity-v2 /-->
 
 				<!-- wp:group {"layout":{"type":"constrained"}} -->
 				<div class="wp-block-group">
