--- a/packages/blocks-next/src/styles/cart.scss
+++ b/packages/blocks-next/src/styles/cart.scss
@@ -15,5 +15,9 @@
         box-shadow: var(--sc-shadow-small);
         cursor: pointer;
         border: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
