Added cart-v2 block to templates

--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -1,10 +1,10 @@
-<!-- wp:surecart/cart {"lock":{"move":true,"remove":true}} -->
-<!-- wp:surecart/cart-header {"text":"Review Your Cart","padding":{"top":"1.25em","right":"1.25em","bottom":"1.25em","left":"1.25em"},"lock":{"move":false,"remove":true}} -->
+<!-- wp:surecart/cart-v2 {"lock":{"move":true,"remove":true}} -->
+<!-- wp:surecart/cart-header-v2 {"text":"Review Your Cart","padding":{"top":"1.25em","right":"1.25em","bottom":"1.25em","left":"1.25em"},"lock":{"move":false,"remove":true}} -->
 <div
 	style="border-bottom:var(--sc-drawer-border);padding-top:1.25em;padding-bottom:1.25em;padding-left:1.25em;padding-right:1.25em">
 	<sc-cart-header><span>Review Your Cart</span></sc-cart-header>
 </div>
-<!-- /wp:surecart/cart-header -->
+<!-- /wp:surecart/cart-header-v2 -->
 
 <!-- wp:surecart/cart-items {"border":true,"lock":{"move":false,"remove":true}} -->
 <sc-line-items
@@ -27,4 +27,4 @@
 	style="border-bottom:var(--sc-drawer-border);padding-top:1.25em;padding-bottom:1.25em;padding-left:1.25em;padding-right:1.25em"
 	type="primary" size="medium" icon="lock">Checkout</sc-cart-submit>
 <!-- /wp:surecart/cart-submit -->
-<!-- /wp:surecart/cart -->
+<!-- /wp:surecart/cart-v2 -->
