--- a/packages/blocks-next/src/styles/dropdown.scss
+++ b/packages/blocks-next/src/styles/dropdown.scss
@@ -68,21 +68,17 @@
 		&__label {
 			flex: 1 1 auto;
 		}
-		.menu-item__check {
+		.sc-menu-item__check {
 			display: flex;
 			position: absolute;
 			left: 0.5em;
 			top: 0.6em;
-			visibility: hidden;
 			align-items: center;
 			font-size: inherit;
 			svg {
 				width: 1em;
 				height: 1em;
 			}
-		}
-		&.sc-checked .menu-item__check {
-			visibility: visible;
 		}
 	}
 }
