Tag clear style

--- a/packages/blocks-next/src/styles/tag.scss
+++ b/packages/blocks-next/src/styles/tag.scss
@@ -13,11 +13,11 @@
 	border: none;
 	border-radius: var(--sc-input-border-radius-medium);
 	padding: 0 var(--sc-spacing-small);
-}
 
-.sc-tag__clear::part(base) {
-	color: inherit;
-	padding: 0;
+	&__clear {
+		width: 1em;
+		height: 1em;
+	}
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -91,7 +91,7 @@
 	border-radius: var(--sc-input-border-radius-small);
 	padding: 0 var(--sc-spacing-x-small);
 
-	.tag__clear {
+	.sc-tag__clear {
 		margin-left: var(--sc-spacing-xx-small);
 		margin-right: calc(-1 * var(--sc-spacing-xxx-small));
 	}
@@ -106,7 +106,7 @@
 	border-radius: var(--sc-input-border-radius-medium);
 	padding: 0 var(--sc-spacing-small);
 
-	.tag__clear {
+	.sc-tag__clear {
 		margin-left: var(--sc-spacing-xx-small);
 		margin-right: calc(-1 * var(--sc-spacing-xx-small));
 	}
@@ -121,7 +121,7 @@
 	border-radius: var(--sc-input-border-radius-large);
 	padding: 0 var(--sc-spacing-medium);
 
-	.tag__clear {
+	.sc-tag__clear {
 		margin-left: var(--sc-spacing-xx-small);
 		margin-right: calc(-1 * var(--sc-spacing-x-small));
 	}
