--- a/packages/blocks-next/src/styles/block-ui.scss
+++ b/packages/blocks-next/src/styles/block-ui.scss
@@ -8,6 +8,8 @@
 	opacity: var(--sc-block-ui-opacity, 0.35);
 	transition: visibility 0s, opacity var(--sc-transition-medium) ease;
 	visibility: visible;
+	margin: 0;
+	padding: 0;
 
 	&[hidden] {
 		display: block;
