Refactor focus styles for product template link

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -13,8 +13,8 @@
 	display: block;
 	text-decoration: none !important;
 
-	&:hover {
-		text-decoration: none;
+	&:focus:not(:focus-visible) {
+		outline: none;
 	}
 }
 
