--- a/packages/blocks-next/src/blocks/product-pagination/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination/style.scss
@@ -3,9 +3,7 @@ $pagination-margin: 0.5em;
 .wp-block-surecart-product-pagination {
 	margin-top: 1em;
 	// Increased specificity to override blocks default margin.
-	> .wp-block-surecart-product-pagination-next,
-	> .wp-block-surecart-product-pagination-previous,
-	> .wp-block-surecart-product-pagination-numbers {
+	> * {
 		/*rtl:ignore*/
 		margin-right: $pagination-margin;
 		margin-bottom: $pagination-margin;
