--- a/packages/blocks-next/src/blocks/product-image/style.scss
+++ b/packages/blocks-next/src/blocks/product-image/style.scss
@@ -1,26 +1,27 @@
-.wp-block-surecart-product-image__wrapper {
-	overflow: hidden;
-
-	&:hover img {
-		transform: scale(1.05);
-	}
-}
 .wp-block-surecart-product-image {
-	max-width: 100%;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	object-fit: contain;
-	display: block;
+	overflow: hidden;
 	aspect-ratio: 4 / 3;
-	transition: transform var(--sc-transition-medium) ease;
 
-	&.sc-is-covered {
+	img {
+		max-width: 100%;
+		width: 100%;
+		height: 100%;
+		box-sizing: border-box;
+		object-fit: contain;
+		display: block;
+		transition: transform var(--sc-transition-medium) ease;
+	}
+
+	&.sc-is-covered img {
 		object-fit: cover;
 	}
 
-	&.sc-is-contained {
+	&.sc-is-contained img {
 		object-fit: contain;
+	}
+
+	&:hover img {
+		transform: scale(1.05);
 	}
 
 	&_placeholder {
@@ -29,3 +30,28 @@
 		background-color: var(--sc-color-gray-300);
 	}
 }
+
+// img {
+// 	max-width: 100%;
+// 	width: 100%;
+// 	height: 100%;
+// 	box-sizing: border-box;
+// 	object-fit: contain;
+// 	display: block;
+// 	aspect-ratio: 4 / 3;
+// 	transition: transform var(--sc-transition-medium) ease;
+
+// 	&.sc-is-covered {
+// 		object-fit: cover;
+// 	}
+
+// 	&.sc-is-contained {
+// 		object-fit: contain;
+// 	}
+
+// 	&_placeholder {
+// 		width: 100%;
+// 		height: 100%;
+// 		background-color: var(--sc-color-gray-300);
+// 	}
+// }
