--- a/packages/blocks-next/src/blocks/product-pagination-previous/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-previous/style.scss
@@ -1,6 +1,15 @@
-.sc-product-pagination-previous {
+.wp-block-surecart-product-pagination-previous {
 	display: inline-flex;
 	align-items: center;
 	gap: var(--sc-spacing-xx-small);
 	text-decoration: none;
+
+	&__icon {
+		width: 1em;
+		height: 1em;
+	}
+
+	&:focus:not(:focus-visible) {
+		outline: none;
+	}
 }
