--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -1,8 +1,8 @@
 <!-- wp:surecart/cart-v2 {"lock":{"move":true,"remove":true}} -->
-<!-- wp:surecart/cart-header-v2 {"text":"Review Your Cart","padding":{"top":"1.25em","right":"1.25em","bottom":"1.25em","left":"1.25em"},"lock":{"move":false,"remove":true}} -->
+<!-- wp:surecart/cart-header-v2 {"text":"Review Your Cart v2","padding":{"top":"1.25em","right":"1.25em","bottom":"1.25em","left":"1.25em"},"lock":{"move":false,"remove":true}} -->
 <div
 	style="border-bottom:var(--sc-drawer-border);padding-top:1.25em;padding-bottom:1.25em;padding-left:1.25em;padding-right:1.25em">
-	<sc-cart-header><span>Review Your Cart</span></sc-cart-header>
+	<sc-cart-header><span>Review Your Cart v2</span></sc-cart-header>
 </div>
 <!-- /wp:surecart/cart-header-v2 -->
 
