--- a/packages/blocks-next/src/blocks/product-pagination-next/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-next/style.scss
@@ -2,7 +2,7 @@
 	display: inline-flex;
 	align-items: center;
 	gap: var(--sc-spacing-xx-small);
-	text-decoration: none;
+	text-decoration: none !important;
 
 	&__icon {
 		width: 1em;
