--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -18,6 +18,7 @@
 .sc-product-item-link {
 	box-sizing: border-box;
 	display: block;
+	height: 100%;
 	text-decoration: none !important;
 
 	&:focus:not(:focus-visible) {
