Added loading state for search input with styling & Fix issue where pagination was showing even when there are no products

--- a/packages/blocks-next/src/styles/input-group.scss
+++ b/packages/blocks-next/src/styles/input-group.scss
@@ -81,6 +81,9 @@
 		text-align: center;
 		white-space: nowrap;
 		opacity: 0.5;
+		&[hidden] {
+			display: none;
+		}
 	}
 
 	// Large input group.
