Handled stacking of product items on mobile & stacking of search on mobile

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -50,3 +50,9 @@
 		animation-name: none;
 	}
 }
+
+@media (max-width: 480px) {
+	.wp-block-surecart-product-template {
+		grid-template-columns: 1fr !important;
+	}
+}
