--- a/packages/blocks-next/src/blocks/cart-header/style.scss
+++ b/packages/blocks-next/src/blocks/cart-header/style.scss
@@ -4,12 +4,11 @@
 	justify-content: space-between;
 	width: 100%;
 	font-size: 1em;
-
 	border-bottom: var(--sc-drawer-border);
-    padding-top: 1.25em;
-    padding-bottom: 1.25em;
-    padding-left: 1.25em;
-    padding-right: 1.25em;
+	padding-top: 1.25em;
+	padding-bottom: 1.25em;
+	padding-left: 1.25em;
+	padding-right: 1.25em;
 
 	&__title {
 		text-align: center;
@@ -21,7 +20,10 @@
 
 	&__close {
 		cursor: pointer;
-		width: 16px;
-		height: 16px;
+
+		svg {
+			width: 20px;
+			height: 20px;
+		}
 	}
 }
