--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -58,7 +58,7 @@
 			<!-- /wp:surecart/product-price-choices-v2 -->
 			<!-- wp:surecart/product-quantity-v2 /-->
 
-			<!-- wp:group {"layout":{"type":"constrained"}} -->
+			<!-- wp:group {"layout":{"type":"flex","orientation":"vertical"}} -->
 			<div class="wp-block-group">
 				<!-- wp:surecart/product-buy-button-v2 {"add_to_cart":true,"text":"Add To Cart","metadata":{"ignoredHookedBlocks":["surecart/product-selected-price-ad-hoc-amount"]},"className":"is-style-outline"} /-->
 
