--- a/templates/templates/single-product.html
+++ b/templates/templates/single-product.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"layout":{"type":"constrained"}} -->
+<!-- wp:group {"layout":{"type":"default"}} -->
 <div class="wp-block-group"><!-- wp:surecart/product-page -->
 	<!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 	<div class="wp-block-columns"><!-- wp:column {"width":"50%"} -->
