Update cart coupon edit and view UI

--- a/packages/blocks-next/src/styles/input-group.scss
+++ b/packages/blocks-next/src/styles/input-group.scss
@@ -14,6 +14,10 @@
 		var(--sc-input-transition, var(--sc-transition-medium)) border,
 		var(--sc-input-transition, var(--sc-transition-medium)) box-shadow;
 
+	&[hidden] {
+		display: none;
+	}
+
 	&::-webkit-search-decoration,
 	&::-webkit-search-cancel-button,
 	&::-webkit-search-results-button,
