--- a/packages/blocks-next/src/blocks/cart-bump-line-item/style.scss
+++ b/packages/blocks-next/src/blocks/cart-bump-line-item/style.scss
@@ -1,7 +1,7 @@
-.sc-cart-subtotal__wrapper {
+.sc-cart-bump-line-item__wrapper {
 	padding: 1.25em;
-    margin-top: 0;
-    padding-bottom: 0;
+	margin-top: 0;
+    padding-top: 0;
 
     .sc-product-line-item__item {
         border-bottom: 0;
