--- a/packages/blocks-next/src/blocks/cart-bump-line-item/style.scss
+++ b/packages/blocks-next/src/blocks/cart-bump-line-item/style.scss
@@ -1,9 +1,9 @@
 .sc-cart-bump-line-item__wrapper {
-	padding: 1.25em;
-	margin-top: 0;
-    padding-top: 0;
+	// padding: 1.25em;
+	// margin-top: 0;
+    // padding-top: 0;
 
-    .sc-product-line-item__item {
-        border-bottom: 0;
-    }
+    // .sc-product-line-item__item {
+    //     border-bottom: 0;
+    // }
 }
