--- a/packages/blocks-next/src/blocks/cart-coupon/style.scss
+++ b/packages/blocks-next/src/blocks/cart-coupon/style.scss
@@ -1,3 +1,7 @@
+.wp-block-surecart-cart-coupon-v2 {
+	border-bottom: var(--sc-drawer-border);
+}
+
 .sc-cart-coupon__wrapper {
 	.trigger {
 		cursor: pointer;
