Add the block for ad-hoc and make sure it is present by default

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -54,6 +54,7 @@
 		<!-- /wp:surecart/product-price-choice-template -->
 		<!-- /wp:surecart/product-price-choices-v2 -->
 		<!-- wp:surecart/product-quantity-v2 /-->
+		<!-- wp:block-surecart/product-selected-price-ad-hoc-amount /-->
 		<!-- wp:surecart/product-buy-buttons-v2 -->
 		<div class="wp-block-surecart-product-buy-buttons-v2 wp-block-buttons sc-block-buttons is-layout-flex">
 			<!-- wp:surecart/product-buy-button-v2 {"add_to_cart":true,"text":"Add To Cart"} /-->
