--- a/packages/blocks-next/src/blocks/cart-subtotal/style.scss
+++ b/packages/blocks-next/src/blocks/cart-subtotal/style.scss
@@ -1,9 +1,1 @@
-.sc-cart-subtotal__wrapper {
-	padding: 1.25em;
-    margin-top: 0;
-    padding-bottom: 0;
-
-    .sc-product-line-item__item {
-        border-bottom: 0;
-    }
-}
+//
