--- a/packages/blocks-next/src/styles/wp-button.scss
+++ b/packages/blocks-next/src/styles/wp-button.scss
@@ -3,7 +3,8 @@
 
 	&.is-style-outline {
 		button.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
-		div.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus) {
+		div.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
+		a.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus) {
 			background-color: transparent;
 			background-image: none;
 		}
